Course 2/Week 3/WebLogProgram/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/6l/bdh9zpv11s55k2lb4s7x8s2w0000gn/T/AppTranslocation/D4CDA2D2-2D14-4750-82FF-5CD63B65B2C7/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/private/var/folders/6l/bdh9zpv11s55k2lb4s7x8s2w0000gn/T/AppTranslocation/D4CDA2D2-2D14-4750-82FF-5CD63B65B2C7/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/6l/bdh9zpv11s55k2lb4s7x8s2w0000gn/T/AppTranslocation/D4CDA2D2-2D14-4750-82FF-5CD63B65B2C7/d/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/private/var/folders/6l/bdh9zpv11s55k2lb4s7x8s2w0000gn/T/AppTranslocation/D4CDA2D2-2D14-4750-82FF-5CD63B65B2C7/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/6l/bdh9zpv11s55k2lb4s7x8s2w0000gn/T/AppTranslocation/D4CDA2D2-2D14-4750-82FF-5CD63B65B2C7/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/6l/bdh9zpv11s55k2lb4s7x8s2w0000gn/T/AppTranslocation/D4CDA2D2-2D14-4750-82FF-5CD63B65B2C7/d/BlueJ.app/Contents/Resources/Java/userlib/apache-csv.jar:/private/var/folders/6l/bdh9zpv11s55k2lb4s7x8s2w0000gn/T/AppTranslocation/D4CDA2D2-2D14-4750-82FF-5CD63B65B2C7/d/BlueJ.app/Contents/Resources/Java/userlib/courserajava.jar:/private/var/folders/6l/bdh9zpv11s55k2lb4s7x8s2w0000gn/T/AppTranslocation/D4CDA2D2-2D14-4750-82FF-5CD63B65B2C7/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/private/var/folders/6l/bdh9zpv11s55k2lb4s7x8s2w0000gn/T/AppTranslocation/D4CDA2D2-2D14-4750-82FF-5CD63B65B2C7/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/private/var/folders/6l/bdh9zpv11s55k2lb4s7x8s2w0000gn/T/AppTranslocation/D4CDA2D2-2D14-4750-82FF-5CD63B65B2C7/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/private/var/folders/6l/bdh9zpv11s55k2lb4s7x8s2w0000gn/T/AppTranslocation/D4CDA2D2-2D14-4750-82FF-5CD63B65B2C7/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/admin/Documents/Course 2/Week 3/WebLogProgram
-d
/Users/admin/Documents/Course 2/Week 3/WebLogProgram/doc
-encoding
UTF-8
-charset
UTF-8
/Users/admin/Documents/Course 2/Week 3/WebLogProgram/LogAnalyzer.java
<---- end of javadoc command ---->
Loading source file /Users/admin/Documents/Course 2/Week 3/WebLogProgram/LogAnalyzer.java...
/Users/admin/Documents/Course 2/Week 3/WebLogProgram/LogAnalyzer.java:144: error: bad initializer for for-loop
      for (day : iPsForDays()) {
           ^
1 error
